# LearnQA_PythonAPI

./: envirnomnent.py  main.py  pyproject.toml  requestsAndMethodsHW.py  requirements.txt
HW_Passed/: cookiesHW.py  jsonParseHW.py  longRedirectHW.py  main.py  test_first_api.py  test_user_agent_assert.py  tokensHW.py
lib/: assertions.py  base_case.py  logger.py  my_requests.py
tests/: test_cookie_headers_assert.py  test_short_phrase_assert.py  test_user_auth.py  test_user_delete.py  test_user_edit.py  test_user_get.py  test_user_register.py
