[tool.poetry]
name = "learnqa-pythonapi"
version = "0.1.0"
description = ""
authors = ["Viktor Khomyak <moozee1991@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
data = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
